--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-    "description": "",
-    "type": "neos-package",
     "name": "ttree/untilmidnight",
+    "description": "A small Fusion helper to get the number of seconds before midnight",
+    "type": "neos-package",
+    "license": "MIT",
     "require": {
-        "neos/flow": "*"
+        "neos/fusion": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
